(add new changes on top of this file)

Änderungen
----------

v0.10.8 (??.10.2011)
 * Default html template for BE modules

v0.10.7 (11.10.2011)
 * BE-Module: New method addMessage to integrate TYPO3 flash messages
 * BE-Handler fully integrated in ExtendedModFunc
 * New common language file locallang.xml

v0.10.6 (30.09.2011) (not released)
 * It is possible to send a 503 service unavailable header if an exception occures. Thanks to Hannes Bochmann!
 * tx_rnbase_util_TYPO3: convenience methods to access uids of BE and FE users
 * new interface tx_rnbase_mod_IModHandler

v0.10.5 (15.09.2011) (not released)
 * FormTool: New method createShowLink.
 * FormTool: use TCA to find hidden and deleted column in createHideLink and createDeleteLink. Thanks to Hannes Bochmann!
 * ErrorMail: Lookup and show current FE and BE user. Thanks to Michael Wagner!

v0.10.4 (16.08.2011) (not released)
 * SearchBase: it is possible to change wrapperclass by options

v0.10.3 (12.08.2011) (not released)
 * Constants for log levels

v0.10.2 (05.08.2011) (not released)
 * SimpleMarker: Default constructor with options array 
 * SimpleMarker: it is possible to add dynamic parameters by PHP code.
 * SimpleMarker: check existence of configured links
 * ListBuilder: SubpartMarker respects english orthography. ###COMPANIES### -> ###COMPANY###
 * It is optional possible to load hidden objects if BE user is logged in. This works mainly for detail pages of plugins.
 * New class for default single view
 * New class tx_rnbase_util_Debug to encapsulate TYPO3 debug functionality for backward compatibility
 * New generic marker MINFO to output all available markers: ###MYOBECT___MINFO###

v0.10.1 (18.07.2011) (not released)
 * BaseFilter: Additional TS path to define filter class: filter.class

v0.10.0 (07.07.2011) (not released)
 * Internal Changes in SearchBase and new hook in MediaMarker
 * Full Workspace-Support added! Automatic version overlay for database queries!